<resources>
    <string name="app_name">InfoLey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="buscar">Buscar</string>
    <string name="capitulo">Navegar por capítulo</string>
    <string name="titulo">Navegar por título</string>
    <string name="articulo">Navegar por artículo</string>
    <string name="otros">Navegar por texto resaltado</string>
    <string name="navegar">Navegar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="infoley_version">v4.2</string>
    <string name="copyright">LA APLICACION ACTUAL NO REPRESENTA UNA ENTIDAD GUBERNAMENTAL\n\n©2024 Martínez Consultora.\nRosario, Santa Fe. Argentina.</string>
    <string name="anexo1">Anexo I</string>
    <string name="desc_anexo1">Disposiciones generales</string>
    <string name="anexo2">Anexo II</string>
    <string name="desc_anexo2">Estrés térmico (carga térmica)</string>
    <string name="anexo3">Anexo III</string>
    <string name="desc_anexo3">Introducción a las sustancias químicas</string>
    <string name="anexo4">Anexo IV</string>
    <string name="desc_anexo4">Iluminación y color</string>
    <string name="anexo5">Anexo V</string>
    <string name="desc_anexo5">Acústica</string>
    <string name="anexo6">Anexo VI</string>
    <string name="desc_anexo6">Instalaciones eléctricas</string>
    <string name="anexo7">Anexo VII</string>
    <string name="desc_anexo7">Protección contra incendios</string>
    <string name="dec351">Decreto 351/79</string>
    <string name="ley19587">Ley 19.587</string>
    <string name="desc_19587">Higiene y Seguridad en el Trabajo</string>
    <string name="ley20744">Ley 20.744</string>
    <string name="desc_20744">Ley de Contrato de Trabajo</string>
    <string name="decreto_911_96">Decreto 911/96</string>
    <string name="desc_911">Reglamenta industria de la construccion</string>
    <string name="res_321_96">Resolución 231/96</string>
    <string name="desc_res_321">Condiciones básicas de Higiene y Seguridad en obra</string>
    <string name="res_51_97">Resolución 51/97</string>
    <string name="desc_res_51">Programa de seguridad en obra</string>
    <string name="res_35_98">Resolución 35/98</string>
    <string name="desc_res_35">Coordinación para la confección de programa de seguridad en obra único</string>
    <string name="res_503_14">Resolución 503/14</string>
    <string name="desc_res_503">Demolición, excavación y submuraciones (complementa 550/11)</string>
    <string name="res_550_11">Resolución 550/11</string>
    <string name="desc_res_550">Movimiento de suelos y excavaciónes</string>
    <string name="res_960_15">Resolución 960/15</string>
    <string name="desc_res_960">Condiciones de seguridad para la operacion de autoelevadores</string>
    <string name="res_655_03">Resolución 655/03</string>
    <string name="desc_res_655">Almacenamiento de Gas Oil</string>
    <string name="modo_noche_on">Modo nocturno</string>
    <string name="small_size">Zoom al 50%</string>
    <string name="decreto_617_97">Decreto 617/97</string>
    <string name="desc_617">Reglamenta actividad agraria</string>
    <string name="decreto_1338_96">Decreto 1338/96</string>
    <string name="desc_1338">Servicios de Medicina y de Higiene y Seguridad</string>
    <string name="ley24557">Ley 24.557</string>
    <string name="desc_ley24557">Ley de Riesgos del Trabajo</string>
    <string name="desc_res_295A1">Ergonomía (295/03)</string>
    <string name="desc_res_295A2">Radiaciones (295/03)</string>
    <string name="dec_658">Decreto 658/03</string>
    <string name="desc_dec_658">Listado de Enfermedades Profesionales</string>
    <string name="dec_249">Decreto 249/07</string>
    <string name="desc_dec_249">Reglamenta actividad minera</string>
    <string name="res_3068_14">Resolución 3068/14</string>
    <string name="desc_res_3068">Ejecución de Trabajos con Tensión menor a 1 kV</string>
    <string name="res_42_18">Resolución 42/18</string>
    <string name="desc_res_42">Manipulación o desplazamiento de bolsas de cemento > 25kg</string>
    <string name="res_61_23_a1">Resolución 61/23 - Anexo I</string>
    <string name="desc_res_61_23_a1">Medidas de Seguridad en Altura</string>
    <string name="res_61_23_a2">Resolución 61/23 - Anexo II</string>
    <string name="desc_res_61_23_a2">Medidas de Seguridad en Altura - GLOSARIO</string>
    <string name="otras">Otras Leyes</string>
    <string name="resoluciones_srt">S.R.T.</string>
    <string name="ley13660">Ley 13.660</string>
    <string name="dec10877">Decreto 10.877/60</string>
    <string name="desc_dec10877">Seguridad de las inst. de elaboración/transformación/almacenamiento de combustibles</string>
    <string name="res_905_15">Resolución 905/15</string>
    <string name="res_319_99">Resolución 319/99</string>
    <string name="desc_res_905">Funciones de los servicios de Higiene y Seguridad y Medicina del Trabajo</string>
    <string name="desc_res_319">Obra repetitiva y de corta duración</string>
    <string name="res_311_03">Resolución 311/03</string>
    <string name="desc_res_311">Reglamenta sector de televisión por cable</string>
    <string name="ley24051">Ley 24.051</string>
    <string name="desc_ley24051">Ley de Residuos Peligrosos</string>
    <string name="res_81_19">Resolución 81/19</string>
    <string name="desc_res_81">Sistema de Vigilancia y Control de Sustancias y Agentes Cancerigenos</string>
    <string name="res_13_20">Resolución 13/20</string>
    <string name="desc_res_13">Manipulación o desplazamiento de productos cárnicos > 25kg</string>
    <string name="lbl_searchtext">…</string>
    <string name="mi_imprimir">Imprimir</string>
    <string name="ley24430">Ley 24.430</string>
    <string name="desc_24430">Constitución Nacional</string>
    <string name="lista_desplegable">Lista desplegable</string>
    <string name="control_deslizante">Control deslizante</string>
    <string name="enlaces">Enlaces</string>
    <string name="SRT">S.R.T.</string>
    <string name="ARG">Leyes Argentinas</string>
    <string name="OLD">InfoLEG</string>
    <string name="desc_OLD">Ministerio de Justicia</string>
    <string name="desc_ARG">Ministerio de Justicia</string>
    <string name="desc_SRT">Superintendencia de Riesgos del Trabajo</string>


</resources>
