<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_search"
        android:enabled="false"
        android:icon="@drawable/ic_search"
        android:title="@string/buscar"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/navigate"
        android:icon="@drawable/ic_navclose"
        android:title="@string/navegar"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_modonoche"
        android:checkable="true"
        android:enabled="false"
        android:icon="@drawable/ic_nightmode"
        android:title="@string/modo_noche_on" />

    <item
        android:id="@+id/mi_small_text"
        android:checkable="true"
        android:enabled="false"
        android:icon="@drawable/ic_textsize"
        android:title="@string/small_size" />
    <item
        android:id="@+id/mi_imprimir"
        android:enabled="false"
        android:icon="@drawable/ic_action_print"
        android:title="@string/mi_imprimir"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="onClickAbout"
        android:title="@string/acerca_de" />
</menu>
